# danelsender.github.io

./: code.html  cv.html  gallery.html  homepage.html  index.html  logic.jss  publications.html  pyproject.toml  resources.html  smoothed-particle-hydrodynamics.html  style.css
api/: main.py
resources/: numerical-methods.html  sph.html
static/: logic.js  logic.jss  style.css
templates/: base.html  code.html  cv.html  gallery.html  homepage.html  publications.html  resources.html
templates/resources/: numerical-methods.html  smoothed-particle-hydrodynamics.html
