[tool.poetry]
name = "Example Project"
version = "0.0.0"
description = "Example Project"
authors = ["Dan Elsender <danelsender@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.8"
fastapi = "^0.112.1"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"
pydantic = "^1.10.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
